work on restricting access to certain parts of the application based on user role on the front end

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -276,6 +276,14 @@ textarea {
   .modal-title {
     @apply text-2xl font-semibold mb-1 leading-tight;
   }
+
+  .address {
+    @apply whitespace-pre-wrap leading-snug;
+  }
+
+  .restricted-msg {
+    @apply dark-light italic text-sm;
+  }
 }
 
 .shadow-custom {
